--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -22,6 +22,8 @@
   </head>
 
   <body id="top">
+
+
     <!-- header 
    ================================================== -->
     <header>
@@ -30,7 +32,7 @@
           <a class="menu-toggle" href="#"><span>Menu</span></a>
 
           <div class="logo">
-            <a href="index.html">KARDS</a>
+            <a href="index.html">LET'S GO</a>
           </div>
 
           <nav id="main-nav-wrap">
@@ -407,8 +409,8 @@
             <div class="item-wrap">
               <img src="images/portfolio/liberty.jpg" alt="Liberty" />
               <a href="#modal-01" class="overlay">
-                <div class="folio-item-table">
-                  <div class="folio-item-cell">
+                <div class="folio-item-box">
+                  <div class="folio-item-text">
                     <h3 class="folio-title">Liberty</h3>
                     <span class="folio-types"> Graphic Design </span>
                   </div>
@@ -427,8 +429,8 @@
                 alt="Beetle"
               />
               <a href="#modal-04" class="overlay">
-                <div class="folio-item-table">
-                  <div class="folio-item-cell">
+                <div class="folio-item-box">
+                  <div class="folio-item-text">
                     <h3 class="folio-title">Beetle</h3>
                     <span class="folio-types"> Branding </span>
                   </div>
@@ -443,8 +445,8 @@
             <div class="item-wrap">
               <img src="images/portfolio/salad.jpg" alt="Salad" />
               <a href="#modal-06" class="overlay">
-                <div class="folio-item-table">
-                  <div class="folio-item-cell">
+                <div class="folio-item-box">
+                  <div class="folio-item-text">
                     <h3 class="folio-title">Salad</h3>
                     <span class="folio-types"> Branding </span>
                   </div>
@@ -460,8 +462,8 @@
             <div class="item-wrap">
               <img src="images/portfolio/shutterbug.jpg" alt="Shutterbug" />
               <a href="#modal-02" class="overlay">
-                <div class="folio-item-table">
-                  <div class="folio-item-cell">
+                <div class="folio-item-box">
+                  <div class="folio-item-text">
                     <h3 class="folio-title">Shutterbug</h3>
                     <span class="folio-types"> Web Design </span>
                   </div>
@@ -475,8 +477,8 @@
             <div class="item-wrap">
               <img src="images/portfolio/clouds.jpg" alt="Clouds" />
               <a href="#modal-03" class="overlay">
-                <div class="folio-item-table">
-                  <div class="folio-item-cell">
+                <div class="folio-item-box">
+                  <div class="folio-item-text">
                     <h3 class="folio-title">Clouds</h3>
                     <span class="folio-types"> Web Design </span>
                   </div>
@@ -491,8 +493,8 @@
             <div class="item-wrap">
               <img src="images/portfolio/lighthouse.jpg" alt="Lighthouse" />
               <a href="#modal-05" class="overlay">
-                <div class="folio-item-table">
-                  <div class="folio-item-cell">
+                <div class="folio-item-box">
+                  <div class="folio-item-text">
                     <h3 class="folio-title">Lighthouse</h3>
                     <span class="folio-types"> Web Development </span>
                   </div>
