--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,900&display=swap"
       rel="stylesheet"
     />
 
@@ -22,8 +22,6 @@
   </head>
 
   <body id="top">
-
-
     <!-- header 
    ================================================== -->
     <header>
@@ -64,24 +62,20 @@
    ================================================== -->
     <section id="intro">
       <div class="intro-overlay"></div>
-      
+
       <!--intro-content -->
       <div class="intro-content">
-        <div>
-          <div>
-            <h5>Hello, World.</h5>
-            <h1>I'm Omar Pérez.</h1>
+        <h5>Hello, World.</h5>
+        <h1>I'm Omar Pérez.</h1>
 
-            <p class="intro-position">
-              <span>Front-end Developer</span>
-              <span>Back-end Developer</span>
-            </p>
+        <p class="intro-position">
+          <span>Front-end Developer</span>
+          <span>Back-end Developer</span>
+        </p>
 
-            <a class="button stroke-white smoothscroll" href="#about" title=""
-              >More About Me</a
-            >
-          </div>
-        </div>
+        <a class="button stroke-white smoothscroll" href="#about" title=""
+          >More About Me</a
+        >
       </div>
 
       <!-- /intro-social -->
@@ -181,7 +175,7 @@
               <strong>JQuery</strong>
             </li>
             <li>
-              <div class="progress percent95"><span>95%</span></div>
+              <div class="progress percent95"><span>90%</span></div>
               <strong>PHP</strong>
             </li>
             <li>
@@ -189,7 +183,6 @@
               <strong>Wordpress</strong>
             </li>
           </ul>
-          <!-- /skill-bars -->
         </div>
       </div>
 
@@ -306,8 +299,8 @@
       </div>
       <!-- /resume-timeline -->
 
-      <div class=" resume-timeline">
-        <div class=" resume-header">
+      <div class="resume-timeline">
+        <div class="resume-header">
           <h2>Education</h2>
         </div>
         <!-- /resume-header -->
@@ -389,7 +382,7 @@
     <!-- Portfolio Section
    ================================================== -->
     <section id="portfolio">
-      <div class=" section-intro">
+      <div class="section-intro">
         <div>
           <h5>Portfolio</h5>
           <h1>Check Out Some of My Works.</h1>
@@ -441,7 +434,7 @@
 
           <!-- /folio-item -->
 
-          <div class=" folio-item">
+          <div class="folio-item">
             <div class="item-wrap">
               <img src="images/portfolio/salad.jpg" alt="Salad" />
               <a href="#modal-06" class="overlay">
@@ -705,7 +698,7 @@
     <!-- contact
    ================================================== -->
     <section id="contact">
-      <div class=" section-intro">
+      <div class="section-intro">
         <div>
           <h5>Contact</h5>
           <h1>I'd Love To Hear From You.</h1>
@@ -718,7 +711,7 @@
         </div>
       </div>
 
-      <div class=" contact-info">
+      <div class="contact-info">
         <div>
           <div class="icon">
             <i class="icon-pin"></i>
@@ -733,7 +726,7 @@
           </p>
         </div>
 
-        <div class=" collapse">
+        <div class="collapse">
           <div class="icon">
             <i class="icon-mail"></i>
           </div>
