--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -108,7 +108,7 @@
           <h1>Let me introduce myself.</h1>
 
           <div class="intro-info">
-            <img src="images/profile-pic.jpg" alt="Profile Picture" />
+            <img src="images/perfil.png" alt="Profile Picture" />
 
             <p class="lead">
               Lorem ipsum Exercitation culpa qui dolor consequat exercitation
@@ -171,11 +171,11 @@
               <strong>CSS3</strong>
             </li>
             <li>
-              <div class="progress percent70"><span>70%</span></div>
+              <div class="progress percent50"><span>50%</span></div>
               <strong>JQuery</strong>
             </li>
             <li>
-              <div class="progress percent95"><span>90%</span></div>
+              <div class="progress percent90"><span>90%</span></div>
               <strong>PHP</strong>
             </li>
             <li>
