--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -108,7 +108,7 @@
           <h1>Let me introduce myself.</h1>
 
           <div class="intro-info">
-            <img src="images/perfil.png" alt="Profile Picture" />
+            <img src="images/profile.jpg" alt="Profile Picture" />
 
             <p class="lead">
               Lorem ipsum Exercitation culpa qui dolor consequat exercitation
