--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -74,26 +74,36 @@
         </p>
 
         <a class="button stroke-white smoothscroll" href="#about" title=""
-          >More About Me</a
+          >MÁS SOBRE MÍ</a
         >
       </div>
 
       <!-- /intro-social -->
       <ul class="intro-social">
         <li>
-          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/omar-perezr/"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </li>
         <li>
-          <a href="#"><i class="fa fa-behance"></i></a>
+          <a href="https://github.com/omarPerez1987"
+            ><i class="fa-brands fa-github"></i
+          ></a>
         </li>
         <li>
-          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="https://twitter.com/omar_perez_dev"
+            ><i class="fa fa-twitter"></i
+          ></a>
         </li>
         <li>
-          <a href="#"><i class="fa fa-dribbble"></i></a>
+          <a href="https://t.me/omarp_dev"
+            ><i class="fa-brands fa-telegram"></i
+          ></a>
         </li>
         <li>
-          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="https://discordapp.com/users/1190003800442945546"
+            ><i class="fa-brands fa-discord"></i
+          ></a>
         </li>
       </ul>
     </section>
@@ -104,17 +114,18 @@
     <section id="about">
       <div class="section-intro">
         <div>
-          <h5>About</h5>
-          <h1>Let me introduce myself.</h1>
+          <h5>ACERCA DE</h5>
+          <h1>Permítame presentarme.</h1>
 
           <div class="intro-info">
-            <img src="images/omar-graffiti.jpg" alt="Profile Picture" />
+            <img src="images/profile.jpg" alt="Profile Picture" />
 
             <p class="lead">
-              Lorem ipsum Exercitation culpa qui dolor consequat exercitation
-              fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure
-              sunt id pariatur Duis laboris amet exercitation veniam labore
-              consectetur ea id quis eiusmod.
+              Soy un alquimista de código, un desarrollador fullstack apasionado
+              por fusionar arte y funcionalidad. Mi enfoque va más allá de las
+              líneas de código; creo experiencias únicas que trascienden lo
+              convencional. Mi misión es tejer magia digital, donde la
+              innovación es la norma.
             </p>
           </div>
         </div>
@@ -122,25 +133,26 @@
 
       <div class="about-content">
         <div>
-          <h3>Profile</h3>
+          <h3>Perfil</h3>
           <p>
-            Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse
-            in magna sint minim officia consectetur nisi commodo ea magna
-            pariatur nisi cillum.
+            Me esfuerzo por ofrecer soluciones simples y efectivas a través de
+            mi trabajo. Con habilidades técnicas en constante evolución, estoy
+            aquí para contribuir de manera positiva y crecer junto a cada
+            proyecto.
           </p>
 
           <ul class="info-list">
             <li>
-              <strong>Fullname:</strong>
-              <span>Juan Dela Cruz</span>
+              <strong>Nombre:</strong>
+              <span>Omar Pérez</span>
             </li>
             <li>
-              <strong>Birth Date:</strong>
-              <span>September 28, 1987</span>
+              <strong>Fecha de Nacimiento:</strong>
+              <span>Enero 01, 1987</span>
             </li>
             <li>
-              <strong>Job:</strong>
-              <span>Freelancer, Frontend Developer</span>
+              <strong>Trabajo:</strong>
+              <span>Full-stack developer </span>
             </li>
             <li>
               <strong>Website:</strong>
@@ -148,7 +160,7 @@
             </li>
             <li>
               <strong>Email:</strong>
-              <span>me@kardswebsite.com</span>
+              <span>omar.perez.dev@gmail.com</span>
             </li>
           </ul>
         </div>
