--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -16,8 +16,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./src/css/base.css" />
-    <link rel="stylesheet" href="./src/css/main.css" />
+    <link rel="stylesheet" href="src/css/base.css" />
+    <link rel="stylesheet" href="src/css/main.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
   </head>
 
@@ -118,7 +118,7 @@
           <h1>Permítame presentarme.</h1>
 
           <div class="intro-info">
-            <img src="images/profile.jpg" alt="Profile Picture" />
+            <img src="./images/profile.jpg" alt="Profile Picture" />
 
             <p class="lead">
               Soy un alquimista de código, un desarrollador fullstack apasionado
