--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
             <p class="lead">
               Soy un alquimista de código, un desarrollador fullstack apasionado
               por fusionar arte y funcionalidad. Mi enfoque va más allá de las
-              líneas de código; creo experiencias únicas que trascienden lo
-              convencional. Mi misión es tejer magia digital, donde la
-              innovación es la norma.
+              líneas de código; creo en las experiencias únicas que trascienden
+              lo convencional. Mi misión es tejer magia digital, donde agregar
+              valor es mi norma.
             </p>
           </div>
         </div>
@@ -155,8 +155,8 @@
               <span>Full-stack developer </span>
             </li>
             <li>
-              <strong>Website:</strong>
-              <span>www.kardswebsite.com</span>
+              <strong>Github:</strong>
+              <span>https://github.com/omarPerez1987</span>
             </li>
             <li>
               <strong>Email:</strong>
@@ -168,31 +168,31 @@
         <div>
           <h3>Skills</h3>
           <p>
-            Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse
-            in magna sint minim officia consectetur nisi commodo ea magna
-            pariatur nisi cillum.
+            Como desarrollador fullstack, he perfeccionado un conjunto diverso
+            de habilidades para abordar desafíos desde todos los ángulos. Dejo
+            aquí algunas de mis habilidades.
           </p>
 
           <ul class="skill-bars">
             <li>
               <div class="progress percent90"><span>90%</span></div>
-              <strong>HTML5</strong>
+              <strong>HTML5 & CSS3</strong>
             </li>
             <li>
-              <div class="progress percent85"><span>85%</span></div>
-              <strong>CSS3</strong>
+              <div class="progress percent80"><span>80%</span></div>
+              <strong>JAVASCRIPT</strong>
             </li>
             <li>
-              <div class="progress percent50"><span>50%</span></div>
-              <strong>JQuery</strong>
-            </li>
-            <li>
-              <div class="progress percent90"><span>90%</span></div>
-              <strong>PHP</strong>
+              <div class="progress percent80"><span>80%</span></div>
+              <strong>REACT & REDUX</strong>
             </li>
             <li>
               <div class="progress percent75"><span>75%</span></div>
-              <strong>Wordpress</strong>
+              <strong>NODE & EXPRESS</strong>
+            </li>
+            <li>
+              <div class="progress percent75"><span>75%</span></div>
+              <strong>MONGODB & MYSQL</strong>
             </li>
           </ul>
         </div>
@@ -201,11 +201,16 @@
       <div class="button-section">
         <div>
           <a href="#contact" title="Hire Me" class="button stroke smoothscroll"
-            >Hire Me</a
+            >Contáctame</a
           >
-          <a href="#" title="Download CV" class="button button-black"
-            >Download CV</a
+          <a
+            href="https://drive.google.com/file/d/1n2urZwRy3XAV-xPF3Rz0gAd_9zMBZ66-/view?usp=sharing"
+            title="Download CV"
+            class="button button-black"
+            target="_blank"
           >
+            Descargar CV
+          </a>
         </div>
       </div>
     </section>
